--- a/pickle.cabal
+++ b/pickle.cabal
@@ -2,7 +2,7 @@ cabal-version:       2.4
 name:                pickle
 version:             1.0.0.0
 synopsis:            Instant StatsD in Haskell
-description:         Instant StatsD in Haskell
+description:         Instant StatsD in Haskell. Easy to implement in a program you've already written without any refactoring to pass any sockets/configuration around.
 bug-reports:         https://github.com/Luabee/pickle/issues
 license:             MIT
 license-file:        LICENSE
